--- a/10_stop_words/stop_words_exercise.ipynb
+++ b/10_stop_words/stop_words_exercise.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "646c9e7a",
    "metadata": {
     "colab": {
@@ -58,7 +58,16 @@
     "id": "646c9e7a",
     "outputId": "7d59339e-bf53-4239-eda5-134e6af42e22"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n",
+      "5.22 %\n"
+     ]
+    }
+   ],
    "source": [
     "text = '''\n",
     "Thor: Love and Thunder is a 2022 American superhero film based on Marvel Comics featuring the character Thor, produced by Marvel Studios and \n",
@@ -69,11 +78,15 @@
     "'''\n",
     "\n",
     "#step1: Create the object 'doc' for the given text using nlp()\n",
+    "doc=nlp(text)\n",
     "\n",
     "\n",
     "\n",
     "#step2: define the variables to keep track of stopwords count and total words count\n",
-    "\n",
+    "stop_list=[]\n",
+    "for token in doc:\n",
+    "    if token.is_stop:\n",
+    "        stop_list.append(token)\n",
     "\n",
     "\n",
     "#step3: iterate through all the words in the document\n",
@@ -81,10 +94,71 @@
     "\n",
     "\n",
     "#step4: print the count of stop words\n",
-    "\n",
+    "print(len(stop_list))\n",
     "    \n",
     "\n",
-    "#step5: print the percentage of stop words compared to total words in the text\n"
+    "#step5: print the percentage of stop words compared to total words in the text\n",
+    "print(round(len(stop_list)/len(text)*100,2),\"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1f39416d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[and,\n",
+       " is,\n",
+       " a,\n",
+       " on,\n",
+       " the,\n",
+       " by,\n",
+       " and,\n",
+       " by,\n",
+       " It,\n",
+       " is,\n",
+       " the,\n",
+       " to,\n",
+       " and,\n",
+       " the,\n",
+       " in,\n",
+       " the,\n",
+       " The,\n",
+       " is,\n",
+       " by,\n",
+       " who,\n",
+       " the,\n",
+       " with,\n",
+       " and,\n",
+       " as,\n",
+       " and,\n",
+       " In,\n",
+       " the,\n",
+       " to,\n",
+       " but,\n",
+       " must,\n",
+       " to,\n",
+       " and,\n",
+       " and,\n",
+       " is,\n",
+       " now,\n",
+       " the,\n",
+       " to,\n",
+       " the,\n",
+       " from,\n",
+       " all]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stop_list"
    ]
   },
   {
@@ -112,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "4e9e663a",
    "metadata": {
     "colab": {
@@ -121,7 +195,19 @@
     "id": "4e9e663a",
     "outputId": "72779ead-6cb9-4f92-da54-3e3a882c2069"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m doc\u001b[38;5;241m=\u001b[39mpreprocess(text)\n\u001b[0;32m     10\u001b[0m x\u001b[38;5;241m=\u001b[39mdoc\u001b[38;5;241m.\u001b[39msplit()\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mnot\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
    "source": [
     "#use this pre-processing function to pass the text and to remove all the stop words and finally get the cleaned form\n",
     "def preprocess(text):\n",
@@ -139,6 +225,51 @@
     "\n",
     "\n",
     "#step3: finally print those 2 transformed texts\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b53dc87e",
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2367354729.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [21]\u001b[1;36m\u001b[0m\n\u001b[1;33m    [lambda e: x.remove(e) if e in x]\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "[lambda e: x.remove(e) if e in x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8447a4fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mremove\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mnot\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "x.remove('not')"
    ]
   },
   {
@@ -211,6 +342,7 @@
    "name": "stop_words_exercise_solutions.ipynb",
    "provenance": []
   },
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -226,7 +358,30 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
