--- a/11_bag_of_n_grams/10_bag_of_n_grams.ipynb
+++ b/11_bag_of_n_grams/10_bag_of_n_grams.ipynb
@@ -123,11 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus = [\n",
-    "    \"Thor ate pizza\",\n",
-    "    \"Loki is tall\",\n",
-    "    \"Loki is eating pizza\"\n",
-    "]"
+    "corpus = [\"Thor ate pizza\",\"Loki is tall\",\"Loki is eating pizza\"]"
    ]
   },
   {
@@ -1329,8 +1325,9 @@
    "name": "BOW_exercise.ipynb",
    "provenance": []
   },
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1344,7 +1341,30 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
