--- a/11_bag_of_n_grams/bag_of_n_grams_exercise_solutions.ipynb
+++ b/11_bag_of_n_grams/bag_of_n_grams_exercise_solutions.ipynb
@@ -524,7 +524,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "LLs6pmXE3Zou",
-    "outputId": "1bbb4bf1-0b1e-4c5e-f751-fa4b331e772f"
+    "outputId": "1bbb4bf1-0b1e-4c5e-f751-fa4b331e772f",
+    "run_control": {
+     "marked": true
+    }
    },
    "outputs": [
     {
@@ -564,7 +567,7 @@
     "\n",
     "\n",
     "#4. print the classfication report\n",
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y_test, y_pred))\n"
    ]
   },
   {
@@ -1244,6 +1247,15 @@
     "\n",
     "**Machine Learning is like a trial and error scientific method, where we keep trying all the possible algorithms we have and select the one which gives good results and satisfies the requirements like latency, interpretability, etc.**\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s"
+   ]
   }
  ],
  "metadata": {
@@ -1252,6 +1264,7 @@
    "name": "bag_of_n_grams_exercise.ipynb",
    "provenance": []
   },
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -1267,7 +1280,30 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
