--- a/13_word_vectors_spacy_overview/overview_spacy_word_vectors.ipynb
+++ b/13_word_vectors_spacy_overview/overview_spacy_word_vectors.ipynb
@@ -13,7 +13,31 @@
     "# In order to download\n",
     "# word vectors you need to install large or medium english model. We will install the large one!\n",
     "# make sure you have run \"python -m spacy download en_core_web_lg\" to install large english model\n",
+    "\n",
     "nlp = spacy.load(\"en_core_web_lg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "827d4102",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<spacy.lang.en.English at 0x1b91f873d30>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import spacy \n",
+    "\n",
+    "spacy.load('en_core_web_sm')"
    ]
   },
   {
@@ -80,7 +104,7 @@
    ],
    "source": [
     "base_token = nlp(\"bread\")\n",
-    "base_token.vector.shape"
+    "base_token.vector.shape "
    ]
   },
   {
@@ -148,17 +172,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "daffd61f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nlp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m king \u001b[38;5;241m=\u001b[39m \u001b[43mnlp\u001b[49m\u001b[38;5;241m.\u001b[39mvocab[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mking\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mvector\n\u001b[0;32m      2\u001b[0m man \u001b[38;5;241m=\u001b[39m nlp\u001b[38;5;241m.\u001b[39mvocab[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mman\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mvector\n\u001b[0;32m      3\u001b[0m woman \u001b[38;5;241m=\u001b[39m nlp\u001b[38;5;241m.\u001b[39mvocab[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwoman\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mvector\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nlp' is not defined"
+     ]
+    }
+   ],
    "source": [
     "king = nlp.vocab[\"king\"].vector\n",
     "man = nlp.vocab[\"man\"].vector\n",
     "woman = nlp.vocab[\"woman\"].vector\n",
     "queen = nlp.vocab[\"queen\"].vector\n",
     "\n",
-    "result = king - man + woman"
+    "\n",
+    "result = king - man + woman\n",
+    "result"
    ]
   },
   {
@@ -181,13 +219,22 @@
    "source": [
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "cosine_similarity([result], [queen])"
+    "cosine_similarity([result], [queen])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a36ccc2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -201,7 +248,30 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.12"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
