--- a/1_regex/regex_nlp_exercise_questions.ipynb
+++ b/1_regex/regex_nlp_exercise_questions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['elonmusk', 'teslarati', 'dummy_tesla', 'dummy_2_tesla']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text = '''\n",
     "Follow our leader Elon musk on twitter here: https://twitter.com/elonmusk, more information \n",
@@ -39,7 +50,7 @@
     "https://twitter.com/dummy_tesla\n",
     "https://twitter.com/dummy_2_tesla\n",
     "'''\n",
-    "pattern = '' # todo: type your regex here\n",
+    "pattern = '\\/twitter.com\\/([\\w]+)' # todo: type your regex here\n",
     "\n",
     "re.findall(pattern, text)"
    ]
@@ -57,9 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[' Credit Risk', ' Supply Risk']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text = '''\n",
     "Concentration of Risk: Credit Risk\n",
@@ -73,7 +95,7 @@
     "products in a timely manner at prices, quality levels and volumes acceptable to us, or our inability to efficiently manage these components from these\n",
     "suppliers, could have a material adverse effect on our business, prospects, financial condition and operating results.\n",
     "'''\n",
-    "pattern = '' # todo: type your regex here\n",
+    "pattern = ':(.+)' # todo: type your regex here\n",
     "\n",
     "re.findall(pattern, text)"
    ]
@@ -89,16 +111,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['FY2021 Q1', 'FY2021 S1']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text = '''\n",
     "Tesla's gross cost of operating lease vehicles in FY2021 Q1 was $4.85 billion.\n",
     "BMW's gross cost of operating vehicles in FY2021 S1 was $8 billion.\n",
     "'''\n",
     "\n",
-    "pattern = '' # todo: type your regex here\n",
+    "pattern = 'FY\\d{4} ?Q[1-4]|FY\\d{4} S[1-2]' # todo: type your regex here\n",
     "matches = re.findall(pattern, text)\n",
     "matches"
    ]
@@ -112,8 +145,9 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -127,7 +161,30 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
